k8s/apps/owncast/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: gabekangas/owncast:0.2.5@sha256:0b4052dd2862921b35a5b4eb99219b0e85b2b9101e22d1e1079caaeaca5a8f92
          ports:
            - containerPort: 1935
            - containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /app/data
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      volumes:
        - name: data
          hostPath:
            path: /mnt/local/owncast/data
            type: DirectoryOrCreate
      restartPolicy: Always
      securityContext:
        seccompProfile:
          type: RuntimeDefault
